--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -7,6 +7,12 @@
     span {
         position: relative;
 
+        &:last-child {
+            &::after {
+                content: none;
+            }
+        }
+
         &::after {
             content: "";
             display: block;
@@ -17,6 +23,8 @@
             top: 12px;
             position: absolute;
             border-radius: 6px;
+
+
         }
     }
 }
