Added project content

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   --primary: #333;
+  --highlighter: #145187;
   --border: #999999;
   --ten-px: 0.625rem;
 }
