--- a/src/components/Experience/Experience.scss
+++ b/src/components/Experience/Experience.scss
@@ -3,13 +3,23 @@
     font-size: 1rem;
 }
 
+// .experience-wrapper {
+//     padding-bottom: 1rem;
+//     border-bottom: 1px solid var(--highlighter);
+// }
+
 .work-list {
+    margin-left: 5px;
     h3 {
         font-size: 1.25rem;
         font-weight: 500;
         margin: 0.5rem 0;
         display: flex;
         column-gap: 10px;
+    }
+
+    .sub-heading {
+        font-size: 1.2rem;
     }
 }
 
