Added projects & education and awards

--- a/src/components/Experience/Experience.scss
+++ b/src/components/Experience/Experience.scss
@@ -3,10 +3,9 @@
     font-size: 1rem;
 }
 
-// .experience-wrapper {
-//     padding-bottom: 1rem;
-//     border-bottom: 1px solid var(--highlighter);
-// }
+.experience-wrapper {
+    margin-bottom: 1.25rem;
+}
 
 .work-list {
     margin-left: 5px;
