--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -1,6 +1,9 @@
+.project-main {
+    margin-top: 0 !important;
+}
+
 .project-wrapper {
-    padding-bottom: 1rem;
-    border-bottom: 1px solid var(--highlighter);
+    margin: 1.25rem 0;
 }
 
 .project-wrapper .list-wrapper {
