--- a/src/components/Experience/Experience.scss
+++ b/src/components/Experience/Experience.scss
@@ -9,16 +9,13 @@
 
 .work-list {
     margin-left: 5px;
-    h3 {
-        font-size: 1.25rem;
-        font-weight: 500;
-        margin: 0.5rem 0;
-        display: flex;
-        column-gap: 10px;
-    }
 
-    .sub-heading {
+    .pro-desc {
         font-size: 1.2rem;
+        margin-bottom: 0.5rem;
+        span {
+            padding-right: 5px;
+        }
     }
 }
 
