Added the final result of the resume

--- a/src/components/Awards/Awards.scss
+++ b/src/components/Awards/Awards.scss
@@ -1,8 +1,8 @@
 .awards-main {
-    margin-top: 0 !important;
 
     .sub-heading {
         font-size: 1.2rem;
         font-weight: normal;
+        display: block;
     }
 }
