--- a/src/components/Educations/Educations.scss
+++ b/src/components/Educations/Educations.scss
@@ -1,10 +1,8 @@
 .education-main {
-    margin-top: 0 !important;
     .education-wrapper {
-        margin: 1.25rem 0;
-
         .sub-heading{
             font-size: 1.2rem;
+            font-weight: 600;
         }
     }
 }
