--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -3,10 +3,17 @@
     flex-direction: column;
     font-size: 1.2rem;
     flex-wrap: wrap;
-    column-gap: 1.5rem;
+    margin-top: 1rem;
+
+    .list {
+        margin-bottom: .5rem;
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
 
     .skill-title {
-        // font-weight: 500;
+        font-weight: 600;
     }
 
     span {
