--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@use './styles//variables.scss' as *;
+
 #root {
   display: flex;
   justify-content: center;
@@ -13,6 +15,6 @@
   flex-direction: column;
 
   section {
-    color: var(--primary);
+    color: $primary;
   }
 }
