--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,19 +1,23 @@
+@use '.././../styles/variables.scss' as *;
+
 .header-container {
     text-align: center;
-    margin-top: 1rem;
+    margin-top: 0;
+    margin-bottom: 2rem;
 
     h1 {
         font-size: 2.2rem;
         font-weight: 400;
         line-height: 1;
-        margin-bottom: var(--ten-px);
+        margin-bottom: $tenpx;
+        margin-top: 0;
     }
 
     .desgination {
         display: block;
-        font-size: 1.2rem;
-        font-weight: 300;
-        margin-bottom: var(--ten-px);
+        font-size: 1.3rem;
+        font-weight: 400;
+        margin-bottom: $tenpx;
     }
 
     .contact-list {
@@ -24,9 +28,9 @@
             display: flex;
             align-items: center;
             margin: 0 .3rem;
-            font-size: 1rem;
+            font-size: 1.1rem;
             text-decoration: none;
-            color: var(--primary);
+            color: $primary;
             svg {
                 margin-right: .3rem;
             }
