--- a/src/components/Awards/Awards.scss
+++ b/src/components/Awards/Awards.scss
@@ -4,5 +4,9 @@
         font-size: 1.2rem;
         font-weight: normal;
         display: block;
+
+        span {
+            font-weight: 600;
+        }
     }
 }
